--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "saras verma",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9"
   },
   "devDependencies": {
